[package]
name = "ffp_firmware"
version = "1.0.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
stm32ral = { version = "0.4.1", features = ["stm32f0x2", "rt"] }
cortex-m-semihosting = "0.3.5"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
