[package]
name = "ffp_firmware"
version = "1.3.1"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"
panic-ramdump = "0.1.1"
stm32ral = { version = "0.4.1", features = ["stm32f0x2", "rt"] }
cortex-m-semihosting = "0.3.5"
num_enum = { version = "0.4.3", default-features = false }
git-version = "0.3.4"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
