[package]
name = "ffp"
description = "Program iCE40 FPGAs and SPI flash memories"
version = "1.2.0"
authors = ["Adam Greig <adam@adamgreig.com>"]
edition = "2018"
repository = "https://github.com/adamgreig/ffp"
license = "Apache-2.0 OR MIT"

[dependencies]
libusb = "0.3"
clap = "~2.33.0"
failure = "0.1"
failure_derive = "0.1"
